--- a/dev/deployment copy.yaml
+++ b/dev/deployment copy.yaml
@@ -1,19 +1,19 @@
 apiVersion: apps/v1
 kind: Deployment
 metadata:
-  name: myapp-1
+  name: myapp
 spec:
   selector:
     matchLabels:
-      app: myapp-1
+      app: myapp
   replicas: 1
   template:
     metadata:
       labels:
-        app: myapp-1
+        app: myapp
     spec:
       containers:
-      - name: myapp-1
+      - name: myapp
         image: nginx
         ports:
         - containerPort: 80
