--- a/dev/service copy.yaml
+++ b/dev/service copy.yaml
@@ -1,10 +1,10 @@
 apiVersion: v1
 kind: Service
 metadata:
-  name: myapp1-service
+  name: myapp-service
 spec:
   selector:
-    app: myapp-1
+    app: myapp-
   ports:
   - port: 8080
     protocol: TCP
