--- a/test-cd/nodeserver/values.yaml
+++ b/test-cd/nodeserver/values.yaml
@@ -3,7 +3,7 @@
 replicaCount: 1
 revisionHistoryLimit: 1
 image:
-  repository: nodeserver
+  repository: node
   tag: 1.0.0
   pullPolicy: IfNotPresent 
   resources:
