--- a/test-cd/nodeserver/values.yaml
+++ b/test-cd/nodeserver/values.yaml
@@ -4,7 +4,7 @@ replicaCount: 1
 revisionHistoryLimit: 1
 image:
   repository: node
-  tag: 1.0.0
+  tag: alpine
   pullPolicy: IfNotPresent 
   resources:
     requests:
